--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -5,8 +5,8 @@
     android:shape="rectangle">
 
     <gradient android:startColor="@color/colorPrimary"
-        android:centerColor="@color/colorAccent"
-        android:endColor="@color/colorPrimaryDark"
+        android:centerColor="@color/colorlightRed"
+        android:endColor="@color/colorDarkRed"
         android:angle="45"/>
     <corners android:radius="30dp"/>
     <stroke android:width="1dp"
