--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -71,10 +71,12 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/profile"
             android:layout_gravity="center"
             android:id="@+id/image_profile"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            app:civ_border_color="@color/colorPrimary"
+            app:civ_border_width="2dp"/>
 
         <TextView
             android:layout_width="wrap_content"
