--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -61,13 +61,16 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
                 android:orientation="horizontal"
-                android:padding="16dp">
+                android:padding="16dp"
+                android:gravity="center">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/image_profile"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:background="@drawable/profile" />
+                    android:background="@drawable/profile"
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="2dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -198,7 +201,7 @@
                 android:layout_below="@id/mid_bar"
                 android:layout_marginLeft="-5dp"
                 android:layout_marginRight="-5dp"
-                android:background="@drawable/button_background_line"
+                android:background="@color/colorlightRed"
                 android:orientation="horizontal">
 
                 <ImageButton
