--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -6,10 +6,15 @@
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image_profile"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/image_profile"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/profile"
+        app:civ_border_width="0.5dp"
+        app:civ_border_color="@color/colorPrimary"/>
+
+
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -22,31 +27,60 @@
         android:layout_marginStart="5dp">
 
         <TextView
+            android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="username"
-            android:id="@+id/username"
             android:maxLines="1"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:text="Username"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/fullname"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
             android:maxLines="1"
-            android:text="Full Name"/>
+            android:text="Full Name" />
 
     </LinearLayout>
 
+
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:background="@drawable/button_background"
-        android:visibility="gone"
         android:id="@+id/btn_follow"
-        android:textColor="@color/colorPrimary"
+        android:layout_width="70dp"
+        android:layout_height="25dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:background="@drawable/button_background"
+        android:text="Follow"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:visibility="visible" />
+
+    <Button
+        android:id="@+id/btn_message"
+        android:layout_width="70dp"
+        android:layout_height="25dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="75dp"
+        android:background="@drawable/button_background_line"
+        android:text="Message"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12sp"
+        android:visibility="visible" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="350dp"
+        android:layout_height="1dp"
+        android:layout_below="@id/image_profile"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/grey_500" />
+
 </RelativeLayout>
